--- a/bin/oop/view/Main.fxml
+++ b/bin/oop/view/Main.fxml
@@ -1,37 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.shape.Line?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="oop.control.Controller">
+<AnchorPane fx:id="anchorPane" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="oop.control.Controller">
    <children>
-      <TabPane tabClosingPolicy="UNAVAILABLE" tabMaxWidth="100.0">
+      <TabPane prefHeight="600.0" prefWidth="800.0" tabClosingPolicy="UNAVAILABLE" tabMaxWidth="100.0">
         <tabs>
           <Tab text="Console">
             <content>
-              <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0">
+              <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="800.0">
                      <children>
-                        <GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="363.0" prefWidth="600.0">
+                        <GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="567.0" prefWidth="800.0">
                           <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="496.0" minWidth="10.0" prefWidth="344.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="256.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="496.0" minWidth="10.0" prefWidth="482.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="309.0" minWidth="10.0" prefWidth="298.0" />
                           </columnConstraints>
                           <rowConstraints>
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints maxHeight="102.0" minHeight="0.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints maxHeight="184.0" minHeight="0.0" prefHeight="154.0" vgrow="SOMETIMES" />
+                            <RowConstraints maxHeight="290.0" minHeight="10.0" prefHeight="290.0" vgrow="SOMETIMES" />
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
                               <TextField fx:id="commandTextField" onAction="#processCommand" prefHeight="31.0" prefWidth="574.0" promptText="'help' for list of commands" GridPane.columnSpan="2" />
-                              <ListView fx:id="logList" prefHeight="90.0" prefWidth="604.0" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.rowSpan="3" />
+                              <ListView fx:id="logList" prefHeight="450.0" prefWidth="780.0" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.rowSpan="3">
+                                 <GridPane.margin>
+                                    <Insets />
+                                 </GridPane.margin></ListView>
                            </children>
                            <padding>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -39,11 +52,52 @@
                         </GridPane>
                      </children>
                      <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                        <Insets left="10.0" right="10.0" top="10.0" />
                      </padding></AnchorPane>
             </content>
           </Tab>
+            <Tab text="Simulator">
+              <content>
+                <AnchorPane fx:id="simAnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <ImageView fx:id="host1" fitHeight="72.0" fitWidth="77.0" layoutX="99.0" layoutY="88.0" onMouseClicked="#host1Context" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../../../../../Users/Chi/Downloads/host.png" />
+                           </image>
+                        </ImageView>
+                        <Line fx:id="line1" endX="575.0" endY="250.0" startX="370.0" startY="120.0" strokeWidth="5.0" translateX="275.0" visible="false" AnchorPane.rightAnchor="697.5" />
+                        <ImageView fx:id="switchImage" fitHeight="98.0" fitWidth="109.0" layoutX="374.0" layoutY="211.0" onMouseClicked="#switchContext" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../../../../../Users/Chi/Downloads/switch.png" />
+                           </image>
+                        </ImageView>
+                        <ImageView fx:id="host2" fitHeight="72.0" fitWidth="77.0" layoutX="99.0" layoutY="224.0" onMouseClicked="#host2Context" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../../../../../Users/Chi/Downloads/host.png" />
+                           </image>
+                        </ImageView>
+                        <ImageView fx:id="host3" fitHeight="72.0" fitWidth="77.0" layoutX="99.0" layoutY="362.0" onMouseClicked="#host3Context" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../../../../../Users/Chi/Downloads/host.png" />
+                           </image>
+                        </ImageView>
+                        <Line fx:id="line2" endX="582.0" endY="250.0" layoutX="-467.0" layoutY="10.0" startX="373.0" startY="250.0" strokeWidth="5.0" translateX="260.0" visible="false" />
+                        <Line fx:id="line3" endX="203.0" endY="260.0" layoutY="10.0" startX="-3.0" startY="385.0" strokeWidth="5.0" translateX="170.0" visible="false" />
+                        <Label alignment="CENTER" layoutX="35.0" layoutY="78.0" text="AA:BB:CC:DD:EE:FF 192.168.0.1" />
+                        <Label alignment="CENTER" layoutX="35.0" layoutY="214.0" text="FF:EE:DD:CC:BB:AA 192.168.0.2" />
+                        <Label alignment="CENTER" layoutX="33.0" layoutY="352.0" prefHeight="21.0" prefWidth="206.0" text="00:11:22:33:44:55 192.168.0.3" />
+                        <Label layoutX="402.0" layoutY="299.0" text="Switch" />
+                        <Label layoutX="114.0" layoutY="150.0" text="Host1" />
+                        <Label layoutX="114.0" layoutY="289.0" text="Host2" />
+                        <Label layoutX="116.0" layoutY="424.0" text="Host3" />
+                     </children>
+                  </AnchorPane>
+              </content>
+            </Tab>
         </tabs>
       </TabPane>
    </children>
+   <padding>
+      <Insets bottom="10.0" />
+   </padding>
 </AnchorPane>
